--- a/react/balicomau/src/styles/HeroSection.css
+++ b/react/balicomau/src/styles/HeroSection.css
@@ -3,13 +3,36 @@ a {
   }
 
 header .hero-image img {
+    width: auto;
     /* width: 100%; */
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    max-height: 100%;
-    height: 300px;
+    /* margin-left: -135vw; */
+    /* margin-right: auto; */
+    /* max-width: 100%; */
+    /* max-height: 100%; */
+    height: 400px;
+    /* position: absolute; */
+    padding-right: 10px;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    /* -webkit-transform: translateX(-500px); */
+    /* transform: translateX(-500px); */
+    margin: auto;
+}
+
+.hero-image {
+    /* background-image: url("/hero-image.jpg"); */
+}
+
+.header-menu {
+    /* margin: 5px 10px 0px 10px; */
+    /* position: fixed; */
+}
+
+.header-title {
+    text-align: center;
+}
+
+.book-button {
+    float: right;
 }
