change hero image

--- a/react/balicomau/src/styles/index.css
+++ b/react/balicomau/src/styles/index.css
@@ -2,3 +2,11 @@ body #root {
     /* margin: 10px; */
     overflow-x: hidden;
 }
+
+@media only screen and (min-width: 1200px) {
+    body #root {
+        margin: auto;
+        overflow-x: hidden;
+        width: 1200px;
+    }
+  }
