--- a/react/balicomau/src/styles/HeroSection.css
+++ b/react/balicomau/src/styles/HeroSection.css
@@ -3,25 +3,20 @@ a {
   }
 
 header .hero-image img {
-    width: auto;
-    /* width: 100%; */
+    /* width: auto;
     display: block;
-    /* margin-left: -135vw; */
-    /* margin-right: auto; */
-    /* max-width: 100%; */
-    /* max-height: 100%; */
     height: 400px;
-    /* position: absolute; */
-    padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 20px;
-    /* -webkit-transform: translateX(-500px); */
-    /* transform: translateX(-500px); */
-    margin: auto;
+    margin: auto; */
 }
 
 .hero-image {
-    /* background-image: url("/hero-image.jpg"); */
+    height: 100%; 
+    width: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header-menu {
@@ -36,3 +31,17 @@ header .hero-image img {
 .book-button {
     float: right;
 }
+
+/* @media only screen and (min-width: 600px) {
+    header .hero-image img {
+        height: auto;
+        width: 800px;
+    }
+  }
+
+  @media only screen and (min-width: 960) {
+    header .hero-img img {
+        height: auto;
+        width: 1200px;
+    }
+  } */
