--- a/react/balicomau/src/styles/HeroSection.css
+++ b/react/balicomau/src/styles/HeroSection.css
@@ -12,11 +12,20 @@ header .hero-image img {
 }
 
 .hero-image {
-    height: 100%; 
+    height: 700px;
     width: auto;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    /* height: 700px;
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw; */
+
 }
 
 .header-menu {
