--- a/react/balicomau/src/styles/ImageSection.css
+++ b/react/balicomau/src/styles/ImageSection.css
@@ -1,10 +1,22 @@
 .image-section img {
-    height: auto; 
-    width: auto; 
-    max-width: 270px; 
-    max-height: 270px;
+    /* height: auto;  */
+    /* width: auto;  */
+    max-width: 370px; 
+    /* max-height: 280px; */
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 5px;
 }
+
+img {
+    /* height: auto;  */
+    /* width: auto;  */
+    max-width: 370px; 
+    /* max-height: 280px; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 5px;
+}
+
