--- a/react/balicomau/src/styles/index.css
+++ b/react/balicomau/src/styles/index.css
@@ -12,9 +12,17 @@ body #root {
     }
   } */
 
+  body .content {
+    background-color: whitesmoke;
+  }
+
   @media only screen and (min-width: 1200px) {
     body .content {
         margin: auto;
+        padding: 50px;
         width: 1100px;
+        z-index: 2;
+        margin-top: -100px;
+        position: relative;
     }
   }
