--- a/react/balicomau/src/styles/index.css
+++ b/react/balicomau/src/styles/index.css
@@ -6,7 +6,7 @@ body #root {
 @media only screen and (min-width: 1000px) {
     body .content {
         margin: auto;
-        padding-top: 40px;
+        /* padding-top: 40px; */
         width: 1000px; 
         max-width: 1100px;
         position: relative;
