--- a/react/balicomau/src/styles/index.css
+++ b/react/balicomau/src/styles/index.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body #root {
     overflow-x: hidden;
     background-color: whitesmoke;
@@ -13,9 +17,10 @@ body #root {
     }
 
     body .contentZIndex {
-        background-color: whitesmoke;
+        background-color: white;
         margin: auto;
-        padding-top: 50px;
+        /* padding-top: 50px; */
+        padding: 50px 50px 0px 50px;
         width: 1000px;
         max-width: 1100px;
         z-index: 2;
